--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "fix": "f2elint fix"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^0.2.4",
     "@vueuse/core": "^5.0.3",
     "axios": "^0.21.1",
+    "element-plus": "^1.2.0-beta.6",
     "vue": "^3.2.6",
     "vue-i18n": "^9.0.0",
     "vue-router": "^4.0.11",
@@ -39,8 +41,7 @@
     "vite": "^2.5.1",
     "vite-plugin-components": "^0.11.4",
     "vite-plugin-compression": "^0.3.5",
-    "vite-plugin-mock": "^2.8.0",
-    "vite-plugin-pages": "^0.19.3"
+    "vite-plugin-mock": "^2.8.0"
   },
   "husky": {
     "hooks": {
