--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "tailwindcss": "^3.0.0",
     "ts-jest": "^27.0.3",
     "typescript": "4.0.8",
+    "unplugin-auto-import": "^0.5.3",
+    "unplugin-vue-components": "^0.17.9",
     "vite": "^2.5.1",
     "vite-plugin-components": "^0.11.4",
     "vite-plugin-compression": "^0.3.5",
