--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,13 +4,16 @@
   "i18n-ally.sortKeys": true,
   "vetur.experimental.templateInterpolationService": true,
   "vetur.validation.style": false,
-  "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact", "vue"],
-  "stylelint.validate": ["css", "scss", "less", "acss"],
+  "eslint.validate": [
+    "javascript",
+    "javascriptreact",
+    "typescript",
+    "typescriptreact",
+    "vue"
+  ],
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": false,
-    "source.fixAll.stylelint": false,
-    "source.fixAll.markdownlint": false
+    "source.fixAll.eslint": true
   },
-  "editor.formatOnSave": true,
+  "editor.formatOnSave": false,
   "editor.defaultFormatter": "esbenp.prettier-vscode"
 }
