--- a/package.json
+++ b/package.json
@@ -6,53 +6,73 @@
   "author": "CoolSnow(coolsnow2020@gmail.com)",
   "license": "MIT",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development vite --port 3001 --open",
     "build": "cross-env NODE_ENV=production vite build",
     "build-dev": "cross-env NODE_ENV=production vite build --mode devserver",
-    "test": "cross-env NODE_ENV=development jest -i",
-    "scan": "f2elint scan",
-    "fix": "f2elint fix"
-  },
-  "dependencies": {
-    "@element-plus/icons-vue": "^0.2.4",
-    "@vueuse/core": "^5.0.3",
-    "axios": "^0.21.1",
-    "element-plus": "^1.2.0-beta.6",
-    "vue": "^3.2.6",
-    "vue-i18n": "^9.0.0",
-    "vue-router": "^4.0.11",
-    "vuex": "^4.0.2"
-  },
-  "devDependencies": {
-    "@types/jest": "^26.0.23",
-    "@vitejs/plugin-vue": "^1.6.0",
-    "@vue/compiler-sfc": "^3.1.2",
-    "@vuedx/typescript-plugin-vue": "^0.7.4",
-    "autoprefixer": "latest",
-    "cross-env": "^7.0.3",
-    "f2elint": "^1.2.0",
-    "jest": "^27.0.6",
-    "mockjs": "^1.1.0",
-    "pnpm": "^5.18.7",
-    "postcss": "latest",
-    "tailwindcss": "^3.0.0",
-    "ts-jest": "^27.0.3",
-    "typescript": "4.0.8",
-    "unplugin-auto-import": "^0.5.3",
-    "unplugin-vue-components": "^0.17.9",
-    "vite": "^2.5.1",
-    "vite-plugin-components": "^0.11.4",
-    "vite-plugin-compression": "^0.3.5",
-    "vite-plugin-mock": "^2.8.0"
+    "dev": "cross-env NODE_ENV=development vite --port 3001 --open",
+    "format": "pretty-quick",
+    "lint": "eslint \"**/*.{vue,ts,js}\"",
+    "sort": "npx sort-package-json \"package.json\"",
+    "test": "cross-env NODE_ENV=development jest -i"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "f2elint commit-file-scan",
-      "commit-msg": "f2elint commit-msg-scan"
+      "pre-commit": "pretty-quick --staged",
+      "commit-msg": "commitlint -e $HUSKY_GIT_PARAMS"
     }
   },
   "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "ts",
+      "json",
+      "vue"
+    ],
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1"
+    },
     "preset": "ts-jest",
-    "testEnvironment": "node"
+    "testEnvironment": "jsdom",
+    "transform": {
+      "^.+\\.ts$": "ts-jest",
+      "^.+\\.vue$": "@vue/vue3-jest"
+    }
+  },
+  "dependencies": {
+    "@element-plus/icons-vue": "^2.0.9",
+    "@vueuse/core": "^9.2.0",
+    "axios": "^0.27.2",
+    "element-plus": "^2.2.16",
+    "vue": "^3.2.37",
+    "vue-i18n": "^9.1.10",
+    "vue-router": "^4.1.2",
+    "vuex": "^4.0.2"
+  },
+  "devDependencies": {
+    "@antfu/eslint-config-vue": "^0.26.3",
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
+    "@types/jest": "^29.0.0",
+    "@vitejs/plugin-vue": "^3.1.0",
+    "@vue/compiler-sfc": "^3.2.38",
+    "@vuedx/typescript-plugin-vue": "^0.7.5",
+    "autoprefixer": "10.4.8",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.20.0",
+    "eslint-config-prettier": "^8.5.0",
+    "jest": "^29.0.2",
+    "mockjs": "^1.1.0",
+    "pnpm": "^7.11.0",
+    "postcss": "8.4.16",
+    "prettier": "^2.7.1",
+    "pretty-quick": "^3.1.3",
+    "tailwindcss": "^3.1.8",
+    "ts-jest": "^28.0.8",
+    "typescript": "4.8.2",
+    "unplugin-auto-import": "^0.11.2",
+    "unplugin-vue-components": "^0.22.4",
+    "vite": "^3.0.2",
+    "vite-plugin-components": "^0.13.3",
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-mock": "^2.9.6"
   }
 }
